RESOLVED FIXED101283
[EFL][WK2] Fix wrong coding style in the boilerplates
https://bugs.webkit.org/show_bug.cgi?id=101283
Summary [EFL][WK2] Fix wrong coding style in the boilerplates
Jinwoo Song
Reported 2012-11-05 17:22:28 PST
Some boilerplate have wrong coding style.
Attachments
Patch (7.92 KB, patch)
2012-11-05 17:27 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2012-11-05 17:27:14 PST
Kangil Han
Comment 2 2012-11-05 18:23:21 PST
Comment on attachment 172450 [details] Patch LGTM, thanks!
WebKit Review Bot
Comment 3 2012-11-05 19:46:45 PST
Comment on attachment 172450 [details] Patch Clearing flags on attachment: 172450 Committed r133554: <http://trac.webkit.org/changeset/133554>
WebKit Review Bot
Comment 4 2012-11-05 19:46:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.