[EFL][WK2] Fix wrong coding style in the boilerplates https://bugs.webkit.org/show_bug.cgi?id=101283

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-11-05
Reviewed by Gyuyoung Kim.

Fix boilerplate which have wrong coding style.

* UIProcess/efl/InputMethodContextEfl.cpp:
* UIProcess/efl/InputMethodContextEfl.h:
* UIProcess/efl/PageClientDefaultImpl.cpp:
* UIProcess/efl/PageClientDefaultImpl.h:
* UIProcess/efl/PageClientLegacyImpl.cpp:
* UIProcess/efl/PageClientLegacyImpl.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@133554 bbb929c8-8fbe-4397-9dbb-9b2b20218538