Source/WebKit2/UIProcess/efl/PageClientDefaultImpl.h
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2011 Samsung Electronics
-   Copyright (C) 2012 Intel Corporation. All rights reserved.
+ * Copyright (C) 2012 Intel Corporation. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
